interprete/target/generated-sources/antlr4/com/lenguaje/zuju/interprete/ZujuParser.java
// Generated from com\lenguaje\zuju\interprete\Zuju.g4 by ANTLR 4.5.1
package com.lenguaje.zuju.interprete;

	import java.util.Map;
	import java.util.HashMap;
	import com.lenguaje.zuju.interprete.ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ZujuParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAMA=1, ENT=2, REAL=3, CADENA=4, BOOL=5, MOSTRAR=6, SI=7, SINO=8, 
		PARA=9, MAS=10, MENOS=11, MULT=12, DIV=13, COMENTARIO=14, COMENTARIO_COMPLETO=15, 
		Y=16, O=17, MAYORQ=18, MENORQ=19, MAYORI=20, MENORI=21, IGUAL=22, NOIGUAL=23, 
		ASIGNAR=24, LLAVE_ABIERTA=25, LLAVE_CERRADA=26, PAR_ABIERTO=27, PAR_CERRADO=28, 
		PUNTO_COMA=29, COMILLAS=30, BOOLEAN=31, ID=32, ENTERO=33, NUMERO=34, WS=35;
	public static final int
		RULE_program = 0, RULE_sentencia = 1, RULE_var_decl = 2, RULE_tipo_dato = 3, 
		RULE_var_asignacion = 4, RULE_mostrar = 5, RULE_condicional = 6, RULE_bucle_para = 7, 
		RULE_enunciado = 8, RULE_proposicion = 9, RULE_expresion = 10, RULE_factor = 11, 
		RULE_term = 12;
	public static final String[] ruleNames = {
		"program", "sentencia", "var_decl", "tipo_dato", "var_asignacion", "mostrar", 
		"condicional", "bucle_para", "enunciado", "proposicion", "expresion", 
		"factor", "term"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'programa'", "'ent'", "'real'", "'cadena'", "'bool'", "'mostrar'", 
		"'si'", "'sino'", "'para'", "'+'", "'-'", "'*'", "'/'", null, null, "'&&'", 
		"'||'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'='", "'{'", "'}'", 
		"'('", "')'", "';'", "'\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PROGRAMA", "ENT", "REAL", "CADENA", "BOOL", "MOSTRAR", "SI", "SINO", 
		"PARA", "MAS", "MENOS", "MULT", "DIV", "COMENTARIO", "COMENTARIO_COMPLETO", 
		"Y", "O", "MAYORQ", "MENORQ", "MAYORI", "MENORI", "IGUAL", "NOIGUAL", 
		"ASIGNAR", "LLAVE_ABIERTA", "LLAVE_CERRADA", "PAR_ABIERTO", "PAR_CERRADO", 
		"PUNTO_COMA", "COMILLAS", "BOOLEAN", "ID", "ENTERO", "NUMERO", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Zuju.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Map<String, SimboloVariable> symbolTable = new HashMap<String, SimboloVariable>();

	public ZujuParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public SentenciaContext sentencia;
		public TerminalNode PROGRAMA() { return getToken(ZujuParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(ZujuParser.ID, 0); }
		public TerminalNode LLAVE_ABIERTA() { return getToken(ZujuParser.LLAVE_ABIERTA, 0); }
		public TerminalNode LLAVE_CERRADA() { return getToken(ZujuParser.LLAVE_CERRADA, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZujuVisitor ) return ((ZujuVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(PROGRAMA);
			setState(27);
			match(ID);
			setState(28);
			match(LLAVE_ABIERTA);

						List<ASTNode> body = new ArrayList<ASTNode>();
					
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENT) | (1L << REAL) | (1L << CADENA) | (1L << BOOL) | (1L << MOSTRAR) | (1L << SI) | (1L << PARA) | (1L << ID))) != 0)) {
				{
				{
				setState(30);
				((ProgramContext)_localctx).sentencia = sentencia();
				body.add(((ProgramContext)_localctx).sentencia.node);
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			match(LLAVE_CERRADA);

						for(ASTNode n : body) {
							n.execute(symbolTable);
						}
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public ASTNode node;
		public Var_declContext var_decl;
		public Var_asignacionContext var_asignacion;
		public MostrarContext mostrar;
		public CondicionalContext condicional;
		public Bucle_paraContext bucle_para;
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Var_asignacionContext var_asignacion() {
			return getRuleContext(Var_asignacionContext.class,0);
		}
		public MostrarContext mostrar() {
			return getRuleContext(MostrarContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public Bucle_paraContext bucle_para() {
			return getRuleContext(Bucle_paraContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZujuVisitor ) return ((ZujuVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(56);
			switch (_input.LA(1)) {
			case ENT:
			case REAL:
			case CADENA:
			case BOOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				((SentenciaContext)_localctx).var_decl = var_decl();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).var_decl.node;
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				((SentenciaContext)_localctx).var_asignacion = var_asignacion();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).var_asignacion.node;
				}
				break;
			case MOSTRAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				((SentenciaContext)_localctx).mostrar = mostrar();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).mostrar.node;
				}
				break;
			case SI:
				enterOuterAlt(_localctx, 4);
				{
				setState(50);
				((SentenciaContext)_localctx).condicional = condicional();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).condicional.node;
				}
				break;
			case PARA:
				enterOuterAlt(_localctx, 5);
				{
				setState(53);
				((SentenciaContext)_localctx).bucle_para = bucle_para();
				((SentenciaContext)_localctx).node =  ((SentenciaContext)_localctx).bucle_para.node;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public ASTNode node;
		public Tipo_datoContext tipo_dato;
		public Token ID;
		public Tipo_datoContext tipo_dato() {
			return getRuleContext(Tipo_datoContext.class,0);
		}
		public TerminalNode ID() { return getToken(ZujuParser.ID, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(ZujuParser.PUNTO_COMA, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).exitVar_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZujuVisitor ) return ((ZujuVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			((Var_declContext)_localctx).tipo_dato = tipo_dato();
			setState(59);
			((Var_declContext)_localctx).ID = match(ID);
			setState(60);
			match(PUNTO_COMA);
			((Var_declContext)_localctx).node =  new VarDecl((((Var_declContext)_localctx).tipo_dato!=null?_input.getText(((Var_declContext)_localctx).tipo_dato.start,((Var_declContext)_localctx).tipo_dato.stop):null), (((Var_declContext)_localctx).ID!=null?((Var_declContext)_localctx).ID.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_datoContext extends ParserRuleContext {
		public ASTNode node;
		public TerminalNode ENT() { return getToken(ZujuParser.ENT, 0); }
		public TerminalNode REAL() { return getToken(ZujuParser.REAL, 0); }
		public TerminalNode CADENA() { return getToken(ZujuParser.CADENA, 0); }
		public TerminalNode BOOL() { return getToken(ZujuParser.BOOL, 0); }
		public Tipo_datoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_dato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).enterTipo_dato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).exitTipo_dato(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZujuVisitor ) return ((ZujuVisitor<? extends T>)visitor).visitTipo_dato(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tipo_datoContext tipo_dato() throws RecognitionException {
		Tipo_datoContext _localctx = new Tipo_datoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipo_dato);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENT) | (1L << REAL) | (1L << CADENA) | (1L << BOOL))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_asignacionContext extends ParserRuleContext {
		public ASTNode node;
		public Token ID;
		public EnunciadoContext enunciado;
		public TerminalNode ID() { return getToken(ZujuParser.ID, 0); }
		public TerminalNode ASIGNAR() { return getToken(ZujuParser.ASIGNAR, 0); }
		public EnunciadoContext enunciado() {
			return getRuleContext(EnunciadoContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(ZujuParser.PUNTO_COMA, 0); }
		public Var_asignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).enterVar_asignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).exitVar_asignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZujuVisitor ) return ((ZujuVisitor<? extends T>)visitor).visitVar_asignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_asignacionContext var_asignacion() throws RecognitionException {
		Var_asignacionContext _localctx = new Var_asignacionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			((Var_asignacionContext)_localctx).ID = match(ID);
			setState(66);
			match(ASIGNAR);
			setState(67);
			((Var_asignacionContext)_localctx).enunciado = enunciado();
			setState(68);
			match(PUNTO_COMA);
			((Var_asignacionContext)_localctx).node =  new VarAssign((((Var_asignacionContext)_localctx).ID!=null?((Var_asignacionContext)_localctx).ID.getText():null), ((Var_asignacionContext)_localctx).enunciado.node);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MostrarContext extends ParserRuleContext {
		public ASTNode node;
		public EnunciadoContext enunciado;
		public TerminalNode MOSTRAR() { return getToken(ZujuParser.MOSTRAR, 0); }
		public EnunciadoContext enunciado() {
			return getRuleContext(EnunciadoContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(ZujuParser.PUNTO_COMA, 0); }
		public MostrarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mostrar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).enterMostrar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).exitMostrar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZujuVisitor ) return ((ZujuVisitor<? extends T>)visitor).visitMostrar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MostrarContext mostrar() throws RecognitionException {
		MostrarContext _localctx = new MostrarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mostrar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(MOSTRAR);
			setState(72);
			((MostrarContext)_localctx).enunciado = enunciado();
			setState(73);
			match(PUNTO_COMA);
			((MostrarContext)_localctx).node =  new Mostrar(((MostrarContext)_localctx).enunciado.node);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalContext extends ParserRuleContext {
		public ASTNode node;
		public EnunciadoContext enunciado;
		public SentenciaContext s1;
		public SentenciaContext s2;
		public TerminalNode SI() { return getToken(ZujuParser.SI, 0); }
		public TerminalNode PAR_ABIERTO() { return getToken(ZujuParser.PAR_ABIERTO, 0); }
		public EnunciadoContext enunciado() {
			return getRuleContext(EnunciadoContext.class,0);
		}
		public TerminalNode PAR_CERRADO() { return getToken(ZujuParser.PAR_CERRADO, 0); }
		public List<TerminalNode> LLAVE_ABIERTA() { return getTokens(ZujuParser.LLAVE_ABIERTA); }
		public TerminalNode LLAVE_ABIERTA(int i) {
			return getToken(ZujuParser.LLAVE_ABIERTA, i);
		}
		public List<TerminalNode> LLAVE_CERRADA() { return getTokens(ZujuParser.LLAVE_CERRADA); }
		public TerminalNode LLAVE_CERRADA(int i) {
			return getToken(ZujuParser.LLAVE_CERRADA, i);
		}
		public TerminalNode SINO() { return getToken(ZujuParser.SINO, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).enterCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).exitCondicional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZujuVisitor ) return ((ZujuVisitor<? extends T>)visitor).visitCondicional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(SI);
			setState(77);
			match(PAR_ABIERTO);
			setState(78);
			((CondicionalContext)_localctx).enunciado = enunciado();
			setState(79);
			match(PAR_CERRADO);

								List<ASTNode> body = new ArrayList<ASTNode>();
							
			setState(81);
			match(LLAVE_ABIERTA);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENT) | (1L << REAL) | (1L << CADENA) | (1L << BOOL) | (1L << MOSTRAR) | (1L << SI) | (1L << PARA) | (1L << ID))) != 0)) {
				{
				{
				setState(82);
				((CondicionalContext)_localctx).s1 = sentencia();
				 body.add(((CondicionalContext)_localctx).s1.node);
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(LLAVE_CERRADA);
			setState(91);
			match(SINO);

								List<ASTNode> elseBody = new ArrayList<ASTNode>();
							
			setState(93);
			match(LLAVE_ABIERTA);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENT) | (1L << REAL) | (1L << CADENA) | (1L << BOOL) | (1L << MOSTRAR) | (1L << SI) | (1L << PARA) | (1L << ID))) != 0)) {
				{
				{
				setState(94);
				((CondicionalContext)_localctx).s2 = sentencia();
				elseBody.add(((CondicionalContext)_localctx).s2.node);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(LLAVE_CERRADA);

								((CondicionalContext)_localctx).node =  new Si(((CondicionalContext)_localctx).enunciado.node,body,elseBody);
							
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bucle_paraContext extends ParserRuleContext {
		public ASTNode node;
		public Var_declContext decl;
		public Var_asignacionContext asig;
		public ProposicionContext proposicion;
		public Token id1;
		public EnunciadoContext en;
		public SentenciaContext sentencia;
		public TerminalNode PARA() { return getToken(ZujuParser.PARA, 0); }
		public TerminalNode PAR_ABIERTO() { return getToken(ZujuParser.PAR_ABIERTO, 0); }
		public ProposicionContext proposicion() {
			return getRuleContext(ProposicionContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(ZujuParser.PUNTO_COMA, 0); }
		public TerminalNode ASIGNAR() { return getToken(ZujuParser.ASIGNAR, 0); }
		public TerminalNode PAR_CERRADO() { return getToken(ZujuParser.PAR_CERRADO, 0); }
		public TerminalNode LLAVE_ABIERTA() { return getToken(ZujuParser.LLAVE_ABIERTA, 0); }
		public TerminalNode LLAVE_CERRADA() { return getToken(ZujuParser.LLAVE_CERRADA, 0); }
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Var_asignacionContext var_asignacion() {
			return getRuleContext(Var_asignacionContext.class,0);
		}
		public TerminalNode ID() { return getToken(ZujuParser.ID, 0); }
		public EnunciadoContext enunciado() {
			return getRuleContext(EnunciadoContext.class,0);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public Bucle_paraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bucle_para; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).enterBucle_para(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZujuListener ) ((ZujuListener)listener).exitBucle_para(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZujuVisitor ) return ((ZujuVisitor<? extends T>)visitor).visitBucle_para(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bucle_paraContext bucle_para() throws RecognitionException {
		Bucle_paraContext _localctx = new Bucle_paraContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bucle_para);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(PARA);
			setState(106);
			match(PAR_ABIERTO);
			setState(107);
			((Bucle_paraContext)_localctx).decl = var_decl();
			setState(108);
			((Bucle_paraContext)_localctx).asig = var_asignacion();
			setState(109);
			((Bucle_paraContext)_localctx).proposicion = proposicion();
			setState(110);
			match(PUNTO_COMA);
			setState(111);
			((Bucle_paraContext)_localctx).id1 = match(ID);
			setState(112);
			match(ASIGNAR);
			setState(113);
			((Bucle_paraContext)_localctx).en = enunciado();
			setState(114);
			match(PAR_CERRADO);
			List<ASTNode> body = new ArrayList<ASTNode>();
			setState(116);
			match(LLAVE_ABIERTA);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENT) | (1L << REAL) | (1L << CADENA) | (1L << BOOL) | (1L << MOSTRAR) | (1L << SI) | (1L << PARA) | (1L << ID))) != 0)) {
				{
				{
				setState(117);
				((Bucle_paraContext)_localctx).sentencia = sentencia();
				body.add(((Bucle_paraContext)_localctx).sentencia.node);
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			match(LLAVE_CERRADA);
			((Bucle_paraContext)_localctx).node =  new BuclePara(((Bucle_paraContext)_localctx).decl.node, ((Bucle_paraContext)_localctx).asig.node, ((Bucle_paraContext)_localctx).proposicion.node, new VarAssign((((Bucle_paraContext)_localctx).id1!=null?((Bucle_paraContext)_localctx).id1.getText():null), ((Bucle_paraContext)_localctx).en.node), body);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
